# ariadne

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODEBASE_ANALYSIS.md  IMPL.md  Makefile  README.md  ROADMAP.md  codecov.yml  pyproject.toml  zensical.toml
.claude/: skill-context.md
.claude-plugin/: marketplace.json
.claude/skills/entity-workup/: SKILL.md  note-template.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml  zizmor.yml
docs/: conventions.md  getting-started.md  index.md  integration.md  overview.md  patterns.md  priorities.md  roadmap.md  style.css
docs/architecture/: index.md
docs/architecture/decisions/: 0001-orchestration-on-claude-agent-sdk.md  0002-official-mcp-connectors-over-hand-rolled.md  0003-postgres-mcp-restricted-mode.md  0004-postgres-over-redis-for-relational-store.md  0005-defer-subagent-fan-out.md  0006-dataset-agnostic-pipeline.md  0007-hybrid-retrieval-fulltext-first.md  0008-multimodal-agentic-to-text-not-native-embeddings.md  0009-distribute-as-mcp-server-and-plugin.md  0010-observability-opentelemetry.md  0011-llm-rubric-analytic-standards-eval.md  0012-cloud-vs-air-gapped-deployment-fork.md  0013-user-selectable-model-profiles.md  0014-pgvector-for-the-semantic-leg.md  0015-subagent-fan-out-design.md  0016-entity-resolution-across-stores.md  0017-interactive-workup-report.md  0018-multimodal-connector-slate.md  0019-retrieval-side-evaluation-for-sensemaking.md  0020-adaptive-self-improving-ariadne.md  0021-run-output-organization.md  0022-citation-recall-coverage-hardening.md  0023-measuring-citation-coverage-gain.md  0024-trajectory-grades-observations.md  0025-applying-a-ratified-mapping.md  0026-llm-schema-mapper.md  0027-declarative-user-ontology.md  0028-runtime-dataset-activation-over-mcp.md  0029-distilling-analytic-skills-from-trajectories.md  0030-reflexion-over-the-eval-harness.md  0031-net-effect-ratification-comparator.md  0032-deepening-a-skill-from-new-experience.md  0033-verifying-no-network-egress.md  0034-automated-net-effect-ratification.md  0035-self-consistency-sampling-for-the-rubric-judge.md  index.md
docs/assets/: .gitkeep
docs/research/: analytic-rigor-eval.md  best-practice-architecture.md  claude-agent-sdk-reference.md  index.md  open-weight-validation.md
docs/superpowers/plans/: 2026-06-01-phase-1-vertical-slice.md  2026-06-03-distribution-mcp-server-and-plugin.md  2026-06-03-observability-otel.md  2026-06-03-phase-a-dataset-abstraction.md  2026-06-03-phase-b1-live-indexing-fulltext.md  2026-06-03-phase-b2-enron-adapter.md  2026-06-03-phase-b3-1-semantic-leg.md  2026-06-03-phase-b3-2-semantic-agent-tool.md  2026-06-04-user-model-profiles.md  2026-06-05-run-output-organization.md
docs/superpowers/specs/: 2026-06-01-phase-1-vertical-slice-design.md  2026-06-03-multi-dataset-pipeline-design.md  2026-06-04-user-model-selection-design.md  2026-06-05-adaptive-self-improving-ariadne-design.md  2026-06-05-run-output-organization-design.md  2026-06-07-citation-coverage-hardening-design.md
infra/: profiles.example.toml
infra/litellm/: README.md  config.yaml
infra/neo4j/: docker-compose.yml  seed.cypher
infra/postgres/: docker-compose.yml  seed.sql
mcp_servers/: README.md
overrides/: main.html
overrides/partials/: copyright.html
plugins/ariadne/: .mcp.json
plugins/ariadne/.claude-plugin/: plugin.json
plugins/ariadne/skills/analyst-workup/: SKILL.md
skills/: README.md
src/ariadne/: __init__.py  __main__.py  cli.py  egress.py  mcp_server.py  observability.py  preflight.py  profiles.py  runs.py
src/ariadne/datasets/: base.py  canonical.py  enron.py  indexer.py  lahman.py  load.py  mapping_source.py  streaming.py  synthetic.py  worldspeech.py
src/ariadne/evaluation/: __init__.py  _text.py  judge.py  needle.py  reconcile.py  rubric.py  utilization.py
src/ariadne/graph/: __init__.py  neo4j_server.py  subgraph.py
src/ariadne/introspect/: __init__.py  postgres.py
src/ariadne/learning/: __init__.py  distil.py  netcheck.py  ratify.py  reflect.py  runs.py
src/ariadne/mapping/: __init__.py  adapter.py  llm_mapper.py  ontology.py  propose.py  schema.py
src/ariadne/provenance/: __init__.py  assurance.py  citations.py  entailment.py  governance.py  hook.py  ledger.py  repair.py  skills.py  tradecraft.py
src/ariadne/relational/: __init__.py  postgres_server.py
src/ariadne/report/: __init__.py  html.py  note.py
src/ariadne/unstructured/: document_store.py  embed.py  search_tool.py
tests/: test_smoke.py
tests/fixtures/sample_workup/: README.md  provenance.jsonl
tests/integration/: conftest.py  test_document_store_fts.py  test_document_store_vector.py  test_embed_real.py  test_enron_load.py  test_entailment_hhem.py  test_hybrid_search.py  test_index_embeddings.py  test_lahman_load.py  test_live_indexing.py  test_llm_mapper_live.py  test_mapping_postgres.py  test_postgres_seed.py  test_rubric_judge_live.py  test_search_tool_live.py  test_workup_e2e.py  test_worldspeech_stream.py
tests/unit/: conftest.py  test_assurance.py  test_build_options.py  test_canonical_schema.py  test_citation_entailment.py  test_citation_repair.py  test_citation_validate.py  test_cli_args.py  test_cli_compare.py  test_cli_dataset_flag.py  test_cli_distil.py  test_cli_distil_into.py  test_cli_governance.py  test_cli_index.py  test_cli_index_semantic.py  test_cli_map_llm.py  test_cli_map_ontology.py  test_cli_mapping_dataset.py  test_cli_observability.py  test_cli_profile_validate.py  test_cli_ratify.py  test_cli_reconcile.py  test_cli_reflect.py  test_cli_rubric.py  test_cli_run_dir_errors.py  test_cli_semantic_flag.py  test_dataset_registry.py  test_deepen.py  test_distil.py  test_document_store_sql.py  test_document_store_vector_sql.py  test_egress_guard.py  test_embed.py  test_enron_adapter.py  test_enron_fixture.py  test_enron_mapping.py  test_eval_needle.py  test_eval_persist.py  test_eval_text.py  test_governance.py  (+46 more)
tools/: README.md
