[project]
name = "ariadne"
version = "0.1.0"
description = "Sensemaking harness for nonatomic entities — an agentic analytic interface over heterogeneous, multimodal data (SCADS)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "AJ Barea", email = "ajb6289@rit.edu" }]
keywords = [
    "agentic-ai",
    "sensemaking",
    "entity-resolution",
    "graphrag",
    "claude-agent-sdk",
    "model-context-protocol",
    "intelligence-analysis",
]
dependencies = [
    # research(2026-06): Claude Agent SDK is the harness (orchestrator–worker loop,
    # tools/skills/hooks/MCP). See docs/research/claude-agent-sdk-reference.md.
    "claude-agent-sdk>=0.1",
    # research(2026-06): official Neo4j Python driver — used to seed/health-check the
    # graph and by integration tests. Neo4j is the production graph standard (D1/D4).
    "neo4j>=5.28",
    # research(2026-06): official Neo4j MCP server is the read-only graph connector;
    # gives schema introspection, query timeouts, token-aware truncation, injection-safe
    # parameterization for free (D1). Launched via uvx in cli; pinned here for clarity.
    "mcp-neo4j-cypher>=0.6,<0.7",
    # Convenience: auto-load a local .env (API key + Neo4j conn) at CLI startup.
    "python-dotenv>=1.0",
    # research(2026-06): pin mcp as a direct dep (transitively via claude-agent-sdk);
    # required by ariadne.mcp_server (ADR-0009) and ariadne-mcp entry point.
    "mcp>=1.2",
    # research(2026-06): OTel library guidance — depend only on -api (no-op until SDK
    # configured by the app entry point). SDK + exporter live in dev + otel extra.
    # See ADR-0010 and docs/superpowers/plans/2026-06-03-observability-otel.md.
    "opentelemetry-api>=1.30",
]

[project.optional-dependencies]
data = ["datasets>=3"]

# research(2026-06): SDK + OTLP exporter are optional so the base install emits
# nothing (api-only). Enable for production export or development tracing.
# See ADR-0010 and docs/superpowers/plans/2026-06-03-observability-otel.md.
otel = ["opentelemetry-sdk>=1.30", "opentelemetry-exporter-otlp>=1.30"]

# research(2026-06): Semantic retrieval leg (ADR-0007) — sentence-transformers
# provides the real embedding backend; default model is bge-small-en-v1.5
# (384-dim, Apache-2.0, ungated). Heavy + optional — the core path uses
# FakeEmbedder and stays hermetic without this extra.
embed = ["sentence-transformers>=3"]

# research(2026-06): Stage-2 citation entailment (precision) via Vectara
# HHEM-2.1-Open. Heavy + optional — the core validation path runs without it.
# See docs/research/analytic-rigor-eval.md and src/ariadne/provenance/entailment.py.
eval = [
    # HHEM-2.1-Open ships a trust_remote_code modeling file written for the
    # transformers 4.x API; transformers 5.x breaks it (all_tied_weights_keys).
    "transformers>=4.45,<5",
    "torch>=2.2",
]

[project.scripts]
ariadne = "ariadne.__main__:main"
ariadne-mcp = "ariadne.mcp_server:main"

[project.urls]
Repository = "https://github.com/ajbarea/ariadne"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.140",
    "ruff>=0.15",
    "ty>=0.0.39,<0.1",
    "zensical>=0.0.24",
    "testcontainers[neo4j,postgres]>=4.9",
    "psycopg[binary]>=3.2",
    # research(2026-06): SDK + OTLP exporter in dev so `ty` resolves the
    # setup_telemetry() imports without the `otel` extra (else CI `make lint`
    # breaks on unresolved-import — same optional-extra trap as data/embed). Tests
    # use InMemorySpanExporter + InMemoryMetricReader; production export = otel
    # extra. See ADR-0010.
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [
    ".venv*",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".hypothesis",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "SIM", "W", "C4", "S", "ASYNC", "T20",
    "PERF",  # Performance anti-patterns
    "RUF",   # Ruff-specific rules
    "PTH",   # pathlib over os.path
    "N",     # PEP 8 naming conventions
    "PIE",   # Misc lints (flake8-pie)
    "FURB",  # Modernization (refurb)
    "LOG",   # Logging conventions (flake8-logging)
    "TCH",   # TYPE_CHECKING imports (runtime perf)
    "FLY",   # f-string conversion (flynt)
]
fixable = ["ALL"]
unfixable = ["T20"]  # Don't auto-remove print statements
ignore = [
    "E501",    # Handled by formatter
    "B008",    # Function calls in defaults (FastAPI/Click patterns)
    "SIM102",  # Nested if statements
    "SIM108",  # Use ternary operator
    "N806",    # Uppercase variables in functions — convention for constants-in-scope
    "N818",    # Exception name suffix — too noisy
    "RUF001",  # Ambiguous unicode in strings (em-dashes, arrows)
    "RUF002",  # Ambiguous unicode in docstrings
    "RUF003",  # Ambiguous unicode in comments
    "RUF012",  # Mutable class variables — conflicts with dataclass patterns
    "PERF203", # try-except in loop — sometimes unavoidable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E402", "S603", "S607", "ASYNC221", "S108", "S105", "S106", "S608"]
"scripts/*.py" = ["T201", "S607"]
"src/ariadne/cli.py" = ["T201"]
# SQL-builder module: S608 fires on every parameterised query string; all
# user input travels through %(param)s placeholders so there is no injection risk.
"src/ariadne/unstructured/document_store.py" = ["S608"]

[tool.ruff.lint.isort]
known-first-party = ["ariadne"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"


[tool.coverage.run]
source = ["src/ariadne"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "def main\\(\\):",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_level = "INFO"
log_cli = true
log_cli_level = "WARNING"
markers = [
    "integration: requires real external boundaries (containers/network/live MCP servers)",
    "slow: slow / heavyweight (multimodal inference, large graph traversals)",
]

[tool.uv]
package = true
